# web_server_train

./: Cargo.toml  README.md
fresh-fruit/: deno.json  main.ts
fresh-fruit/islands/: Counter.tsx  shader.wgsl
fresh-fruit/routes/: app.tsx  index.tsx
fresh-fruit/routes/api/: [name].tsx
src/: main.rs  pw_backend.rs
